--- a/Roles/prerequisites/handlers/main.yml
+++ b/Roles/prerequisites/handlers/main.yml
@@ -2,6 +2,7 @@
   service:
     name: "{{ item }}"
     state: started
-    with_items:
-      - ntpd
-      - docker
+    enabled: yes
+  with_items:
+    - ntpd
+    - docker
