--- a/uninstall.yml
+++ b/uninstall.yml
@@ -1,10 +1,11 @@
---- # Playbook for Kubernetes prerequisites
+--- # Playbook to clean up the machines
 - hosts: all
   remote_user: centos
   become: yes
   become_method: sudo
   connection: ssh
-  gather_facts: yes
+  gather_facts: no
+  strategy: free
 
   roles:
-    - prerequisites
+    - uninstall
