--- a/Roles/setup.minions/vars/main.yml
+++ b/Roles/setup.minions/vars/main.yml
@@ -1,6 +1,9 @@
 master_host: centos-master
 listen_address: 0.0.0.0
 minions:
-  - 172.31.22.181: centos-minion1
-  - 172.31.23.178: centos-minion2
-  - 172.31.18.252: centos-minion3
+  - name: centos-minion1
+    ip: 172.31.22.181
+  - name: centos-minion2
+    ip: 172.31.23.178
+  - name: centos-minion3
+    ip: 172.31.18.252
