Add missing package and a pod definition.
Add runc on all hosts.
Add nginx pod definition.

--- a/Roles/prerequisites/tasks/main.yml
+++ b/Roles/prerequisites/tasks/main.yml
@@ -29,6 +29,7 @@
   with_items:
     - ntp
     - kubernetes
+    - runc
   notify: Start the services.
 
 - name: Add simple hosts for easy configuration.
