--- a/Roles/uninstall/tasks/main.yml
+++ b/Roles/uninstall/tasks/main.yml
@@ -8,3 +8,8 @@
     - ntp
     - kubernetes
     - docker
+    - kubernetes-client
+    - kubernetes-master
+    - docker-client
+    - docker-common
+    - runc
